# hew

./: Cargo.toml  PLAN.md  README.md  ROADMAP.md  flake.nix
.github/workflows/: ci.yml  release.yml
assets/themes/: README.md
examples/: README.md  apply_actions.sh  comments.json  demo-head.json  fetch_pr.sh  misskey-ja.comments.json  misskey-ja.patch  rust-long-en.comments.json  rust-long-en.patch  to_sidecar.mjs
src/: cli.rs  comments.rs  loader.rs  main.rs  session.rs  ui.rs
src/comments/: actions.rs  diff.rs  mod.rs  model.rs
src/diff/: generate.rs  mod.rs  model.rs  parse.rs
src/ui/: app.rs  highlight.rs  highlight_cache.rs  mod.rs  render_rows.rs  sidebar.rs  theme.rs
src/ui/app/: comments.rs  input.rs  mod.rs  nav.rs  render.rs  render_boxes.rs  render_lines.rs  wrap.rs
src/ui/app/tests/: comments.rs  composer.rs  mod.rs  mouse.rs  nav.rs  wrap.rs
src/ui/render_rows/: mod.rs  tests.rs  text.rs  threads.rs
src/vcs/: git.rs
themes/: github-dark-high-contrast.tmTheme  hew-dark.tmTheme  vim-dark.tmTheme
