[package]
name = "hewdiff"
version = "0.1.0"
edition = "2021"
description = "High-performance review-first terminal diff viewer with PR-style comments"
license = "MIT"
repository = "https://github.com/yusukeshib/hew"
readme = "README.md"
keywords = ["diff", "patch", "review", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["examples/", ".github/"]

# Crate is `hewdiff` (the `hew` name is taken on crates.io); the binary stays `hew`.
[[bin]]
name = "hew"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
patch = "0.7"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.4", default-features = false, features = ["syntect-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
