[package]
name = "hewdiff"
version = "0.6.2"
edition = "2021"
description = "High-performance review-first terminal diff viewer with PR-style comments"
license = "MIT"
repository = "https://github.com/yusukeshib/hew"
readme = "README.md"
keywords = ["diff", "patch", "review", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["examples/", ".github/"]

# Crate is `hewdiff` (the `hew` name is taken on crates.io); the binary stays `hew`.
[[bin]]
name = "hew"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
# Multiline edit model for the comment composer (readline/emacs-style keys).
# Used as a state/edit model only — the composer is drawn inline in the diff
# row stream, not via tui-textarea's own widget. Pinned to the crossterm-0.28
# line (its From<KeyEvent> impl breaks on crossterm 0.29).
tui-textarea = "0.7"
patch = "0.7"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.4", default-features = false, features = ["syntect-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
